Revert "Banner Content Update and spacing issue fix (#367)" (#368)
This reverts commit 63ac3c0160482a0b097781ca090ff256bae93d96.

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -190,6 +190,9 @@ body {
 
       .theme {
         width: 100%;
+        @media (min-width: $large-screen) {
+          margin-top: 50%;
+        }
         svg {
           width: 40%;
         }
